[package]
name = "pewpew"
version = "0.1.0"
authors = ["Nathan Merritt <gnm@the-merritts.net>"]

repository = "https://github.com/gnmerritt/pewpew"
readme = "README.md"
license = "MIT"

[lib]
name = "pewpew"
path = "src/lib.rs"

[dependencies]
bincode = "1.0.0-alpha6"
bytes = "0.4"
futures = "0.1"
gfx = "0.14.1"
gfx_window_glutin = "0.14.0"
glutin = "0.7.4"
ncollide = "0.11.0"
nphysics3d = "0.6.0"
serde = "0.9.11"
serde_derive = "0.9.11"
time = "0.1.36"
tokio-core = "0.1.6"
tokio-io = "0.1"
tokio-service = "0.1"

[dependencies.nalgebra]
version = "0.11.0"
features = ["serde-serialize"]

[dev-dependencies]
serde_test = "0.9.11"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-sys = "0.1.0"
